RESOLVED FIXED45715
AX: REGRESSION: WebKit does not report label of web popup buttons
https://bugs.webkit.org/show_bug.cgi?id=45715
Summary AX: REGRESSION: WebKit does not report label of web popup buttons
chris fleizach
Reported 2010-09-13 15:52:17 PDT
WebKit does not report label of web popup buttons
Attachments
patch (3.89 KB, patch)
2010-09-13 15:55 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2010-09-13 15:55:39 PDT
chris fleizach
Comment 2 2010-09-13 16:27:41 PDT
Note You need to log in before you can comment on or make changes to this bug.