AX: REGRESSION: WebKit does not report label of web popup buttons https://bugs.webkit.org/show_bug.cgi?id=45715

Reviewed by Darin Adler.

WebCore:

Test: platform/mac/accessibility/popup-button-title.html

* WebCore.xcodeproj/project.pbxproj:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::title):

LayoutTests:

* platform/mac/accessibility/popup-button-title-expected.txt: Added.
* platform/mac/accessibility/popup-button-title.html: Added.



Canonical link: https://commits.webkit.org/58153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67422 268f45cc-cd09-0410-ab3c-d52691b4dbfc